--- a/style.css
+++ b/style.css
@@ -3,3 +3,20 @@
 *::after {
     box-sizing: border-box;
 }
+
+body {
+    font-size: 16rem;
+    min-height: 100vh;
+}
+
+.page-container {
+    width: 80%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+#navbar {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
