--- a/style.css
+++ b/style.css
@@ -2,21 +2,109 @@
 *::before,
 *::after {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    font-size: 16rem;
+    font-size: 1rem;
     min-height: 100vh;
 }
 
 .page-container {
-    width: 80%;
+    width: 100%;
     max-width: 1200px;
     margin: 0 auto;
 }
 
 #navbar {
+    position: sticky;
+    top: 0;
+    padding: 1em;
+    font-size: 1.25rem;
+    font-weight: 700;
+    background-color: #383631;
+}
+
+.nav-list {
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: flex-end;
+    gap: 0.5em;
+    padding: 0.75em;
+}
+
+.nav-item {
+    list-style-type: none;
+}
+
+.nav-link {
+    text-decoration: none;
+    color: #eef2f5;
+    text-shadow: 2px 2px 5px #0b97c4;
+}
+
+.nav-link:hover,
+.nav-link:focus {
+    color: #0b97c4;
+}
+
+#about {
+    background-color: #38707e;
+}
+
+#welcome-section {
+    height: 100vh;
+    text-align: center;
+    padding: 3em;
+}
+
+.welcome-title {
+    text-shadow: 1px 1px 3px #eef2f5;
+    font-size: 2.5rem;
+    font-weight: 700;
+    padding-bottom: 0.75em;
+}
+
+.welcome-subtitle {
+    font-style: italic;
+    text-shadow: 1px 1px 3px #eef2f5;
+    font-size: 1.5rem;
+}
+
+#work {
+    background-color: #5e7f93
+}
+
+#contact {
+    background-color: #383631;
+}
+
+.projects-intro {
+    padding: 1em;
+    text-align: center;
+    text-decoration: underline;
+    text-shadow: 1px 1px 2px #38707e;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: .50em;
+    padding: .50em;
+}
+
+.project-tile {
+    background-color: #a4d9f5;
+}
+
+.project-img {
+    display: block;
+    margin: auto;
+    width: 95%;
+    padding-top: 0.5em;
+}
+
+.project-title {
+    text-align: center;
+    padding: 0.5em;
 }
