Added social icons and project links

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 
 .nav-list {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     gap: 0.5em;
     padding: 0.75em;
 }
@@ -41,6 +41,7 @@ body {
     text-decoration: none;
     color: #eef2f5;
     text-shadow: 2px 2px 5px #0b97c4;
+    cursor: pointer;
 }
 
 .nav-link:hover,
@@ -97,6 +98,22 @@ body {
     background-color: #a4d9f5;
 }
 
+.project-img,
+.social-logo {
+    transition: transform .2s;
+}
+
+.project-img:hover,
+.project-img:focus,
+.social-logo:hover,
+.social-logo:focus {
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+}
+
 .project-img {
     display: block;
     margin: auto;
@@ -107,4 +124,78 @@ body {
 .project-title {
     text-align: center;
     padding: 0.5em;
+}
+
+#contact {
+    text-align: center;
+    padding: 1em;
+}
+
+.footer-contact,
+.profile-container {
+    padding-bottom: 1em;
+}
+
+.profile-container {
+    display: flex;
+    justify-content: center;
+}
+
+.social {
+    padding: 1em;
+}
+
+.social-logo {
+    display: block;
+}
+
+.profile-link {
+    text-decoration: none;
+    color: #eef2f5;
+    text-shadow: 2px 2px 5px #0b97c4;
+    font-size: 1.2rem;
+    padding: 0.50em;
+    cursor: pointer;
+}
+
+.profile-link:hover,
+.profile-link:focus {
+    color: #0b97c4;
+}
+
+.footer-contact {
+    text-shadow: 1px 1px 5px #b0e0e6;
+}
+
+.footer-copyright {
+    font-weight: 700;
+    font-size: 1.2rem;
+    text-shadow: 1px 1px 5px #b0e0e6;
+}
+
+@media only screen and (min-width: 900px) {
+    .nav-list {
+        justify-content: flex-end;
+    }
+    .grid-container {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .nav-link,
+    .project-tile,
+    .profile-link {
+        font-size: 1.3rem;
+    }
+    .footer-copyright {
+        font-size: 1.5rem;
+    }
+    .projects-intro,
+    .footer-contact {
+        font-size: 2rem;
+    }
+    .welcome-subtitle {
+        font-size: 3rem;
+    }
+    .welcome-title {
+        font-size: 5rem;
+    }
 }
